# motor-model

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
cpp_tests/: CMakeLists.txt  test_continuous_mpc.cpp
examples/: mpc_friction_analysis.py  mpc_gui.py
src/motor_model/: __init__.py  _mpc_common.py  brushed_motor.py  continuous_mpc_controller.py  mpc_controller.py  mpc_simulation.py  plotting.py  tube_mpc_controller.py
src/motor_model/_native/: __init__.py  brushed_motor_core.cpp  brushed_motor_core.h  brushed_motor_module.cpp  continuous_mpc.cpp  continuous_mpc_core.cpp  continuous_mpc_core.h  continuous_mpc_manager.cpp  continuous_mpc_manager.h  continuous_mpc_manager_pybind.cpp  continuous_mpc_pybind.cpp  test_module.cpp
tests/: conftest.py  test_brushed_motor.py  test_brushed_motor_native.py  test_continuous_mpc_cpp.py  test_continuous_mpc_gtest.py  test_continuous_mpc_manager.py  test_mpc_controller.py  test_mpc_simulation.py  test_plotting.py  test_pybind11_module.py
