[build-system]
requires = ["setuptools>=61.0", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "motor-model"
version = "0.1.0"
description = "Simulation utilities for a simple brushed DC motor"
authors = [{name = "Generated"}]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
